2017-08-30  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2017-08-30  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.4.0 Release.

	* doc/typhon.arts.workspace.rst:

	Reorder modules alphabetically and list their classes so they appear
	in the sphinx documentation.

	* typhon/arts/workspace/__init__.py, typhon/arts/workspace/agendas.py,
	typhon/arts/workspace/api.py, typhon/arts/workspace/methods.py,
	typhon/arts/workspace/workspace.py:

	Small changes to docs for better sphinx formatting.

2017-08-29  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS._read):

	- Fix KeyError in error message formatting

2017-08-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/datasets/_tovs_defs.py, typhon/datasets/filters.py,
	typhon/datasets/tovs.py:

	Replace formatted strings (breaks python 3.5 compatibility) with
	traditional format strings.
	
2017-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/pyplots/plot_density.py,
	  doc/pyplots/plot_difference.py,
	  doc/pyplots/plot_phase.py,
	  doc/pyplots/plot_speed.py,
	  doc/pyplots/plot_temperature.py,
	  doc/pyplots/plot_velocity.py,
	  doc/pyplots/stylesheet_gallery.py:

	Do not import typhon.plots explicitly as it is imported using
	every typhon import.

	Use the rasterized option when using `pcolormesh`. This should
	decrease the build time significantly.

2017-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/typhon.math.rst: Added `squeezable_logspace`.

	* typhon/math/common.py (squeezable_logspace):

	Added examples and fixed broken markup in docstring.

2017-08-26  Lukas Kluft  <lukas.kluft@gmail.com>

	Fixed documentation with and without ARTS API.

	* doc/typhon.arts.rst, doc/typhon.arts.workspace.rst:

	Moved documentation of workspace module to separate file.
	This file can be excluded when the documentation is build
	without ARTS API.

	Fixed references for automodules for some modules (most likely